# cc_toolchain_builds

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  workflow.yaml
.github/workflows/: clang.yaml  gcc.yaml  sysroot.yaml
cc_common/: pathutils.py
clang/: BuildLlvmMultistage-stage2.cmake  ClangToolChain.cmake  Dockerfile.base  Dockerfile.clang  Dockerfile.clang_single_stage  Dockerfile.clang_two_stage  Dockerfile.cmake  Dockerfile.libclang  build_clang.py  build_cmake.py  build_libclang.py  tags.py
clang/cmake/caches/: BuildLibClang.cmake  BuildLlvmMultistage.cmake
clang/patches/20.1.0/: 0002-Add-libatomic-flags-for-compiler-rt.patch
clang/patches/20.1.0-rc3/: 0001-Add-dependency-to-cxx-headers-to-Rtsan.patch
clang/patches/21.1.0/: 0001-Add-dependency-to-cxx-headers-to-Rtsan.patch  0002-Add-libatomic-flags-for-compiler-rt.patch
clang/patches/21.1.7/: 0003-Remove-llvm-mt-as-distribution-target.patch
cli/: app.py
gcc/: Dockerfile.gcc  Dockerfile.gcc_no_host  Dockerfile.glibc  Dockerfile.host_base  Dockerfile.kernel  base_image_cache.py  build_gcc.py  build_kernel_and_glibc.py  docker-compose.yaml  tags.py
gha/: core.py  event.py  git.py  job.py  permission.py  shell.py  step.py  workflow.py
image/: base_image.py
sysroot/: Dockerfile.base  Dockerfile.glibc  Dockerfile.kernel  build_sysroot.py  tags.py
toolchain/: base.py
workflows/: gcc_workflow.py
workflows/gcc/: Dockerfile.base  Dockerfile.gcc  Dockerfile.gcc_root  Dockerfile.glibc  Dockerfile.host_base  Dockerfile.kernel
