[project]
name = "cc-toolchain-builds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.0",
    "deprecated==1.2.18",
    "docker==7.1.0",
    "idna==3.10",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygithub==2.5.0",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "requests==2.32.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "wrapt==1.17.2",
]
